# tantivy-object-store

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
examples/: index_wiki_local.rs
scripts/: get_wiki_dump.sh
src/: lib.rs
